[gd_scene load_steps=18 format=2]

[ext_resource path="res://asset/sprite2D/UI/bg_main.png" type="Texture" id=1]
[ext_resource path="res://asset/sprite2D/UI/close_button.png" type="Texture" id=2]
[ext_resource path="res://asset/sprite2D/UI/teacher.png" type="Texture" id=3]
[ext_resource path="res://asset/sprite2D/UI/btn_next.png" type="Texture" id=4]
[ext_resource path="res://asset/sprite2D/UI/btn_prev.png" type="Texture" id=5]
[ext_resource path="res://asset/sprite2D/UI/btn_arrow_cycle_green.png" type="Texture" id=6]
[ext_resource path="res://asset/font/Roboto-Black.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://asset/sprite2D/UI/blackboard.png" type="Texture" id=9]
[ext_resource path="res://object/button/button_v2.tscn" type="PackedScene" id=10]
[ext_resource path="res://object/dialog/dialog_blackbroad.gd" type="Script" id=11]
[ext_resource path="res://asset/font/Roboto-Italic.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://asset/font/arial.ttf" type="DynamicFontData" id=13]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform float alpha: hint_range(0,1,0.1);

void fragment(){
	COLOR = vec4(0,0,0,alpha);
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/alpha = 0.6

[sub_resource type="DynamicFont" id=8]
size = 28
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 22
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 13 )

[node name="Dialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="BackgroundBlack" type="TextureRect" parent="."]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true

[node name="BackgroundDialogView" type="NinePatchRect" parent="."]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1098.0
margin_top = -267.0
margin_right = -18.0
margin_bottom = 331.0
texture = ExtResource( 9 )
patch_margin_left = 28
patch_margin_top = 34
patch_margin_right = 35
patch_margin_bottom = 34

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundDialogView"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -106.0
margin_top = 35.0
margin_right = -6.0
margin_bottom = 83.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 2
alignment = 2

[node name="BtnReplay" parent="BackgroundDialogView/HBoxContainer" instance=ExtResource( 10 )]
unique_name_in_owner = true
margin_right = 48.0
margin_bottom = 48.0
texture_normal = ExtResource( 6 )

[node name="BtnClose" parent="BackgroundDialogView/HBoxContainer" instance=ExtResource( 10 )]
unique_name_in_owner = true
margin_left = 52.0
margin_right = 100.0
margin_bottom = 48.0
texture_normal = ExtResource( 2 )

[node name="HBoxContainer2" type="HBoxContainer" parent="BackgroundDialogView"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -101.0
margin_top = -77.0
margin_right = 379.0
margin_bottom = -6.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
custom_constants/separation = 100
alignment = 1

[node name="BtnPrev" parent="BackgroundDialogView/HBoxContainer2" instance=ExtResource( 10 )]
unique_name_in_owner = true
margin_right = 190.0
margin_bottom = 71.0
texture_normal = ExtResource( 5 )

[node name="BtnNext" parent="BackgroundDialogView/HBoxContainer2" instance=ExtResource( 10 )]
unique_name_in_owner = true
margin_left = 290.0
margin_right = 480.0
margin_bottom = 71.0
texture_normal = ExtResource( 4 )

[node name="HBoxContainer3" type="HBoxContainer" parent="BackgroundDialogView"]
margin_left = 39.0
margin_top = 81.0
margin_right = 1039.0
margin_bottom = 507.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="TextureRectView" type="TextureRect" parent="BackgroundDialogView/HBoxContainer3"]
unique_name_in_owner = true
margin_right = 600.0
margin_bottom = 426.0
rect_min_size = Vector2( 600, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundDialogView/HBoxContainer3"]
margin_left = 630.0
margin_right = 1000.0
margin_bottom = 426.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="LabelTitle" type="Label" parent="BackgroundDialogView/HBoxContainer3/VBoxContainer"]
unique_name_in_owner = true
margin_right = 370.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 8 )
text = "DẦU SOI KÍNH"
align = 1
valign = 1
autowrap = true

[node name="LabelSub" type="Label" parent="BackgroundDialogView/HBoxContainer3/VBoxContainer"]
unique_name_in_owner = true
margin_top = 53.0
margin_right = 370.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 9 )
text = "(immersion oil)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="LabelContent" type="Label" parent="BackgroundDialogView/HBoxContainer3/VBoxContainer"]
unique_name_in_owner = true
margin_top = 100.0
margin_right = 370.0
margin_bottom = 426.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 10 )
text = "???? ????? ???? ???? ???? ???? ?? ???. ???? ???? ???
???? ????? ???? ???? ???? ???? ?? ???. ???? ???? ???
???? ????? ???? ???? ???? ???? ?? ???. ???? ???? ???
???? ????? ???? ???? ???? ???? ?? ???. ???? ???? ???"
autowrap = true
clip_text = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Teacher" type="Sprite" parent="."]
position = Vector2( 99, 510 )
scale = Vector2( 0.5, 0.6 )
texture = ExtResource( 3 )

[connection signal="button_up" from="BackgroundDialogView/HBoxContainer/BtnReplay" to="." method="_on_BtnReplay_button_up"]
[connection signal="button_up" from="BackgroundDialogView/HBoxContainer/BtnClose" to="." method="_on_BtnClose_button_up"]
[connection signal="button_up" from="BackgroundDialogView/HBoxContainer2/BtnPrev" to="." method="_on_BtnPrev_button_up"]
[connection signal="button_up" from="BackgroundDialogView/HBoxContainer2/BtnNext" to="." method="_on_BtnNext_button_up"]
